--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,6 +19,13 @@
         <div class="col">
           {{ content }}
         </div>
+        <footer>
+          <div class="row">
+            <div class="col">
+              <p class="mb-0">All rights reserved ©️ 2022</p>
+            </div>
+          </div>
+        </footer>
       </div>
     </div>
   </body>
