--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,9 @@
-<div class="container">
-  <div class="row">
-    <div class="col">
-      <h2>{{ site.title }}</h2>
+<div class="main-header">
+  <div class="container">
+    <div class="row">
+      <div class="col">
+        <h2>{{ site.title }}</h2>
+      </div>
     </div>
-  </div>
+  </div>  
 </div>
