--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,17 +5,17 @@
     <meta name="viewport" content="width=device-width">
     <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 width=%22256%22 height=%22256%22 viewBox=%220 0 100 100%22><rect width=%22100%22 height=%22100%22 rx=%2220%22 fill=%22%23f8d773%22></rect><text x=%2250%%22 y=%2250%%22 dominant-baseline=%22central%22 text-anchor=%22middle%22 font-size=%2290%22>🖼️</text></svg>">
     <style>
-      @import url('https://fonts.googleapis.com/css2?family=Inter:wght@200;500&display=swap');
+      @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;500&display=swap');
     </style>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.0/css/fontawesome.min.css" integrity="sha384-z4tVnCr80ZcL0iufVdGQSUzNvJsKjEtqYZjiQrrYKlpGow+btDHDfQWkFjoaz/Zr" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/9844cb1757.js" crossorigin="anonymous"></script>crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha256-m81NDyncZVbr7v9E6qCWXwx/cwjuWDlHCMzi9pjMobA=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="{{ "/assets/css/theme.css" | relative_url }}">    
     <title>Artwork Vault</title>
   </head>
   <body>
     {% include header.html %}
-    <div class="container">
+    <div class="container mt-3">
       <div class="row">
         <div class="col">
           {{ content }}
