--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
       @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;500&display=swap');
     </style>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <script src="https://kit.fontawesome.com/9844cb1757.js" crossorigin="anonymous"></script>crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/9844cb1757.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha256-m81NDyncZVbr7v9E6qCWXwx/cwjuWDlHCMzi9pjMobA=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="{{ "/assets/css/theme.css" | relative_url }}">    
     <title>Artwork Vault</title>
