Add icon to header

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row">
       <div class="col">
-        <h2>{{ site.title }}</h2>
+        <h2><i class="fa-solid fa-image"></i> {{ site.title }}</h2>
       </div>
     </div>
   </div>  
