Improve tpl; complete mobile design

--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -1,5 +1,12 @@
+// Colors
+
 $yellow: #F8DB3D;
 $purple: #BB5FFE;
 $black: #050505;
-$grey4: #4F4F4F;
+$grey1: #333;
+$grey2: #4f4f4f;
 $green: #219653;
+
+// Radiuses
+
+$br-default: 24px;
