--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,3 +1,4 @@
+<!-- Original theme: https://github.com/jekyll/minima -->
 <!DOCTYPE html>
 <html>
   <head>
@@ -15,21 +16,7 @@
   </head>
   <body>
     {% include header.html %}
-    <div class="container mt-3">
-      <div class="row">
-        <div class="col">
-          {{ content }}
-        </div>
-        <footer>
-          <div class="row">
-            <div class="col">
-              <p class="mb-0">All rights reserved ©️ 2022</p>
-            </div>
-          </div>
-        </footer>
-      </div>
-    </div>
+    {{ content }}
+    {% include footer.html %}
   </body>
 </html>
-
-
