--- a/assets/css/theme.scss
+++ b/assets/css/theme.scss
@@ -9,6 +9,14 @@ body {
   font-family: 'Inter', Arial, sans-serif;
   font-weight: 300;
   color: $black;
+  line-height: 1.2;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+.bg-purple {
+  background-color: $purple;
 }
 
 .main-header {
@@ -24,13 +32,72 @@ body {
 
 hr {
   border-color: $black;
+  opacity: 1;
 }
 
 h2 {
-  color: $grey4;
+  color: $grey2;
   font-size: 1.15rem;
 }
 
 a {
   color: $green;
+}
+
+.av-rounded {
+  border-radius: $br-default;
+}
+
+.post-title {
+  font-size: 18px;
+  line-height: 1.2;
+  color: $grey1;
+}
+
+.callout {
+  font-weight: 500;
+  border: 1px solid $black;
+  border-left: 0;
+  border-right: 0;
+}
+
+.av-avatar {
+  width: 112px;
+}
+
+.post-header {
+  padding: .5rem 0;
+}
+
+.post-content {
+  h2 {
+    margin-bottom: .3rem;
+  }
+
+  .col > *:last-child {
+    margin-bottom: 0;
+  }
+}
+
+.byline {
+  text-transform: uppercase;
+  color: $grey2;
+  font-weight: 500;
+  font-size: 0.85rem;
+
+  a {
+    color: $grey2;
+  }
+}
+
+.main-footer {
+  margin: auto 0 1.5rem 0;
+
+  p {
+    text-align: center;
+    color: grey2;
+    text-transform: uppercase;
+    font-weight: 500;
+    font-size: 0.85rem;
+  }
 }
