Update for desktop styling

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <div class="main-header">
-  <div class="container">
+  <div class="container-fluid">
     <div class="row">
       <div class="col">
         <h2><i class="fa-solid fa-image"></i> {{ site.title }}</h2>
