--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,39 +1,59 @@
 <!-- Original theme: https://github.com/jekyll/minima -->
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width">
-    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 width=%22256%22 height=%22256%22 viewBox=%220 0 100 100%22><rect width=%22100%22 height=%22100%22 rx=%2220%22 fill=%22%23f8d773%22></rect><text x=%2250%%22 y=%2250%%22 dominant-baseline=%22central%22 text-anchor=%22middle%22 font-size=%2290%22>🖼️</text></svg>">
-    <style>
-      @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;500&display=swap');
-    </style>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <script src="https://kit.fontawesome.com/9844cb1757.js" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha256-m81NDyncZVbr7v9E6qCWXwx/cwjuWDlHCMzi9pjMobA=" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="{{ "/assets/css/theme.css" | relative_url }}">    
-    <title>{{ page.title }}</title>
-    <meta property="og:title" content="{{ page.title }}" />
-    <meta property="og:type" content="website" />
-    {% if page.main_image_url %}
-      <meta property="og:image" content="{{ page.main_image_url }}" />
-    {% else %}
-    <meta property="og:image" content="{{ site.base_img }}" />
-    {% endif %}
-    <meta property="og:url" content="{{ site.url }}{{ page.permalink }}" />
-    {% unless page.prompt %}
-      <meta name="description" content="{{ site.description }}" />
-      <meta property="og:description" content="{{ site.description }}" />
-    {% else %}
-      <meta name="description" content="{{ page.prompt }}" />
-      <meta property="og:description" content="{{ page.prompt }}" />
-    {% endunless %}
-    <meta property="og:locale" content="en_US" />
-    <meta property="og:site_name" content="{{ site.title }}" />
-  </head>
-  <body>
-    {% include header.html %}
-    {{ content }}
-    {% include footer.html %}
-  </body>
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width">
+  <link rel="icon" type="image/svg+xml"
+    href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 width=%22256%22 height=%22256%22 viewBox=%220 0 100 100%22><rect width=%22100%22 height=%22100%22 rx=%2220%22 fill=%22%23f8d773%22></rect><text x=%2250%%22 y=%2250%%22 dominant-baseline=%22central%22 text-anchor=%22middle%22 font-size=%2290%22>🖼️</text></svg>">
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;500&display=swap');
+  </style>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
+    integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+  <script src="https://kit.fontawesome.com/9844cb1757.js" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
+    integrity="sha256-m81NDyncZVbr7v9E6qCWXwx/cwjuWDlHCMzi9pjMobA=" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="{{ '/assets/css/theme.css' | relative_url }}">
+  <title>{{ page.title }}</title>
+  <meta property="og:title" content="{{ page.title }}" />
+  <meta name="twitter:title" content="{{ page.title }}">
+  <meta property="og:type" content="website" />
+  {% if page.main_image_url %}
+  <meta property="og:image" content="{{ page.main_image_url }}" />
+  <meta name="twitter:image" content="{{ page.main_image_url }}">
+  {% else %}
+  <meta property="og:image" content="{{ site.base_img }}" />
+  <meta name="twitter:image" content="{{ site.base_img }}">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="700">
+  {% endif %}
+
+  <meta property="og:image:alt" content="Banner for {{ page.title }}">
+
+  <meta property="og:url" content="{{ site.url }}{{ page.permalink }}" />
+  {% unless page.prompt %}
+  <meta name="description" content="{{ site.description }}" />
+  <meta property="og:description" content="{{ site.description }}" />
+  <meta name="twitter:description" content="{{ site.description }}">
+  {% else %}
+  <meta name="description" content="{{ page.prompt }}" />
+  <meta property="og:description" content="{{ page.prompt }}" />
+  <meta name="twitter:description" content="{{ page.prompt }}">
+  {% endunless %}
+  <meta property="og:locale" content="en_US" />
+  <meta property="og:site_name" content="{{ site.title }}" />
+
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:creator" content="{{ site.twitter_username }}">
+
+</head>
+
+<body>
+  {% include header.html %}
+  {{ content }}
+  {% include footer.html %}
+</body>
+
 </html>
