Update home page with an image

--- a/_layouts/initial.html
+++ b/_layouts/initial.html
@@ -7,7 +7,7 @@ layout: default
     <div class="row">
       <div class="col">
         {%- if page.title -%}
-        <h2 class="page-heading">{{ page.title }}</h2>
+        <h2 class="page-heading fs-1 mb-4">{{ page.title }}</h2>
         {%- endif -%}
       
         {{ content }}
