Improve Social contact link output

--- a/_layouts/item.html
+++ b/_layouts/item.html
@@ -63,11 +63,11 @@ layout: default
               <h2>Contact</h2>
     
               <div class="list-group">
-                <a class="list-group-item" href="mailto:{{ page.email }}">{{ page.email }}</a>
-                <a class="list-group-item" href="https://www.twitter.com/{{ site.twitter_username }}">Twitter</a>
-                <a class="list-group-item" href="https://www.facebook.com/{{ site.facebook_username }}">Facebook</a>
+                {% for link in site.social %}
+                  <a class="list-group-item" href="{{ link.url }}">{{ link.name | capitalize }}</a>
+                {% endfor %}
               </div>
-              
+
 
               <div class="col callout my-4 p-3 d-flex align-items-center av-rounded">
                 <i class="fa-solid fa-paper-plane fa-2x me-3"></i>
